Small addition to our page content

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello InAutomatika</title>
 </head>
 <body>
-<h1>In Automatika</h1>
+<h1>In Automatika - It connects Industrial Automation Experts</h1>
 </body>
 </html>
